styles/_cursor.scss
@media (pointer: fine) {
  // this css will only be used when the screen size is min 800px
  .main-cursor,
  .secondary-cursor {
    z-index: 10000;
    pointer-events: none;
    overflow: hidden;
    transform: translate3d(0, 0, 0);
    position: fixed;
  }

  .main-cursor {
    transition: opacity 1s cubic-bezier(0.77, 0, 0.175, 1);
    animation: fadeIn 1s cubic-bezier(0.77, 0, 0.175, 1) 0s forwards;
    mix-blend-mode: difference;
    .main-cursor-background {
      width: 30px;
      height: 30px;
      @apply bg-stone-100 dark:bg-orange-100;
      border-radius: 50%;
    }
  }

  .secondary-cursor {
    width: 60px;
    height: 60px;

    .cursor-background {
      width: 100%;
      height: 100%;
      border-radius: 50%;
      border: 1px solid;
      @apply border-stone-900 dark:border-orange-100;
      position: relative;
      &:after,
      &:before {
        content: "";
        width: 3px;
        height: 3px;
        border-radius: 50%;
        @apply bg-stone-900 dark:bg-orange-100;
        display: block;
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        animation: fadeOut 0.75s cubic-bezier(0.77, 0, 0.175, 1) 0s forwards;
      }
      &:before {
        left: 10px;
      }

      &:after {
        right: 10px;
      }
    }
  }

  @media only screen and (max-width: 700px) {
    body .cursor-wrapper {
      display: "none";
    }
  }
}

